# sharex-server

./: .gitignore  LICENSE  README.md  config.toml.example  main.py  pyproject.toml  requirements.txt  sharex_config.sxcu
.github/workflows/: codeql-analysis.yml
